--- a/package.json
+++ b/package.json
@@ -36,15 +36,13 @@
     "react-dom": "^17.0.1",
     "rollup": "^2.38.0",
     "rollup-plugin-typescript2": "^0.29.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "@types/material-ui": "^0.21.8"
   },
   "peerDependencies": {
     "react-dom": "^17.0.1"
   },
   "files": [
     "dist"
-  ],
-  "dependencies": {
-    "@types/material-ui": "^0.21.8"
-  }
+  ]
 }
